--- a/index.html
+++ b/index.html
@@ -3,6 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Open Graph / Share Preview -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="The Wedding of Heri & Yolanda" />
+    <meta
+      property="og:description"
+      content="Minggu, 15 Februari 2026 | 09.00 WIB" />
+    <meta
+      property="og:url"
+      content="https://wedding-heri-yolanda.mytiketin.com/" />
+    <meta
+      property="og:image"
+      content="https://wedding-heri-yolanda.mytiketin.com/assets/background%20depan.JPEG" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <!-- WhatsApp / Telegram Friendly -->
+    <meta property="og:site_name" content="Heri & Yolanda Wedding" />
+
+    <!-- Fallback (Twitter / browser lain) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="The Wedding of Heri & Yolanda" />
+    <meta
+      name="twitter:description"
+      content="Minggu, 15 Februari 2026 | 09.00 WIB" />
+    <meta
+      name="twitter:image"
+      content="https://wedding-heri-yolanda.mytiketin.com/assets/background%20depan.JPEG" />
     <title>Undangan | Heri & Yola</title>
 
     <!-- Tailwind CDN (boleh tetap dipakai untuk utility kecil) -->
@@ -90,6 +117,7 @@
             <i data-lucide="info" class="lucide-icon"></i>
             <span>Ketuk tombol untuk memulai musik</span>
           </p>
+          <p class="cover-hashtag">#HERtobeYOurs</p>
         </div>
       </div>
     </section>
