--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                   <div class="names" aria-label="Nama Mempelai">
                     <div class="nameTop">Heri</div>
                     <div class="amp">&amp;</div>
-                    <div class="nameBottom">Yolan</div>
+                    <div class="nameBottom">Yola</div>
                   </div>
                 </div>
               </div>
@@ -481,6 +481,20 @@
               aria-label="Buka foto 6">
               <img src="assets/heri.JPEG" alt="Gallery 6" loading="lazy" />
             </button>
+            <button
+              class="g2-item reveal"
+              data-stagger="6"
+              data-full="assets/footer.jpg"
+              aria-label="Buka foto 7">
+              <img src="assets/footer.jpg" alt="Gallery 6" loading="lazy" />
+            </button>
+            <button
+              class="g2-item reveal"
+              data-stagger="8"
+              data-full="assets/bg-acara.JPG"
+              aria-label="Buka foto 6">
+              <img src="assets/bg-acara.JPG" alt="Gallery 6" loading="lazy" />
+            </button>
           </div>
         </div>
 
@@ -674,7 +688,7 @@
               Merupakan kehormatan dan kebahagiaan bagi kami apabila
               Bapak/Ibu/Saudara/i berkenan hadir.
             </p>
-            <p class="title-names mt-3">Heri &amp; Yolanda</p>
+            <p class="title-names mt-3">Heri &amp; Yola</p>
           </div>
         </div>
       </footer>
