--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
         </div>
       </section>
 
-      <!-- GIFT (warna font nanti kita atur di CSS khusus section ini) -->
+      <!-- GIFT -->
       <section
         id="gift"
         class="content-section mempelaiBG"
@@ -603,28 +603,8 @@
             <div
               class="panel mt-6 flex flex-col sm:flex-row sm:items-center sm:justify-between gap-4">
               <div class="flex items-center gap-3">
-                <span class="dana-badge" aria-hidden="true">
-                  <svg
-                    viewBox="0 0 64 64"
-                    class="dana-svg"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <defs>
-                      <linearGradient id="g" x1="0" y1="0" x2="1" y2="1">
-                        <stop offset="0" stop-color="#00AEEF" />
-                        <stop offset="1" stop-color="#0077C8" />
-                      </linearGradient>
-                    </defs>
-                    <rect
-                      x="4"
-                      y="4"
-                      width="56"
-                      height="56"
-                      rx="14"
-                      fill="url(#g)" />
-                    <path
-                      d="M20 34c0-7.2 5.8-13 13-13h11v7H33c-3.3 0-6 2.7-6 6s2.7 6 6 6h11v7H33c-7.2 0-13-5.8-13-13z"
-                      fill="#fff" />
-                  </svg>
+                <span class="bank-badge">
+                  <img src="assets/dana.jpg" alt="DANA" class="bank-logo" />
                 </span>
 
                 <div>
@@ -634,37 +614,36 @@
               </div>
 
               <button id="copyDana" class="btn-ghost" type="button">
-                <i data-lucide="copy" class="lucide-icon"></i>
                 <span>Copy</span>
               </button>
             </div>
 
-            <!-- MANDIRI (ditambah) -->
+            <!-- MANDIRI -->
             <div
               class="panel mt-4 flex flex-col sm:flex-row sm:items-center sm:justify-between gap-4">
               <div class="flex items-center gap-3">
-                <span
-                  class="dana-badge"
-                  aria-hidden="true"
-                  title="Bank Mandiri">
-                  <i data-lucide="landmark" class="lucide-icon"></i>
+                <span class="bank-badge">
+                  <img
+                    src="assets/mandiri.png"
+                    alt="Bank Mandiri"
+                    class="bank-logo" />
                 </span>
 
                 <div>
                   <p class="panel-title leading-tight">MANDIRI</p>
-                  <!-- isi nomor & nama rekening kamu di sini -->
-                  <p class="isi opacity-90">0000000000000 a.n. Heri</p>
+                  <p class="isi opacity-90">
+                    1140028795741 a.n. DESTRIA YOLANDA
+                  </p>
                 </div>
               </div>
 
               <button id="copyMandiri" class="btn-ghost" type="button">
-                <i data-lucide="copy" class="lucide-icon"></i>
                 <span>Copy</span>
               </button>
             </div>
 
             <p class="isi opacity-80 mt-4">
-              *Ganti nomor rekening Mandiri di atas sesuai data asli.
+              *Pastikan nomor rekening sesuai data asli.
             </p>
           </div>
         </div>
