--- a/index.html
+++ b/index.html
@@ -677,5 +677,47 @@
     </main>
 
     <script src="script.js"></script>
+    <script type="module">
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/12.8.0/firebase-app.js";
+      import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.8.0/firebase-analytics.js";
+      import {
+        getFirestore,
+        collection,
+        addDoc,
+        serverTimestamp,
+        query,
+        orderBy,
+        limit,
+        onSnapshot,
+      } from "https://www.gstatic.com/firebasejs/12.8.0/firebase-firestore.js";
+
+      // ✅ config kamu (SUDAH BENAR)
+      const firebaseConfig = {
+        apiKey: "AIzaSyDHfWjivMeLnpyUa9IqIWUyFlofadKCfKU",
+        authDomain: "undangan-30742.firebaseapp.com",
+        projectId: "undangan-30742",
+        storageBucket: "undangan-30742.firebasestorage.app",
+        messagingSenderId: "744594619333",
+        appId: "1:744594619333:web:1721f37923a51c2c7729ac",
+        measurementId: "G-1GZJL54KJF",
+      };
+
+      // init
+      const app = initializeApp(firebaseConfig);
+      getAnalytics(app);
+      const db = getFirestore(app);
+
+      // 👉 biar bisa dipakai di script.js
+      window.__FIREBASE__ = {
+        db,
+        collection,
+        addDoc,
+        serverTimestamp,
+        query,
+        orderBy,
+        limit,
+        onSnapshot,
+      };
+    </script>
   </body>
 </html>
