--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
     <meta
       property="og:image"
-      content="https://wedding-heri-yolanda.mytiketin.com/assets/background-depan.jpg" />
+      content="https://wedding-heri-yolanda.mytiketin.com/assets/background%20depan.JPEG" />
     <meta
       property="og:image:secure_url"
-      content="https://wedding-heri-yolanda.mytiketin.com/assets/background-depan.jpg" />
+      content="https://wedding-heri-yolanda.mytiketin.com/assets/background%20depan.JPEG" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -26,7 +26,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:image"
-      content="https://wedding-heri-yolanda.mytiketin.com/assets/background-depan.jpg" />
+      content="https://wedding-heri-yolanda.mytiketin.com/assets/background%20depan.JPEG" />
 
     <title>Undangan | Heri & Yola</title>
 
