--- a/index.html
+++ b/index.html
@@ -8,25 +8,32 @@
     <meta property="og:title" content="The Wedding of Heri & Yolanda" />
     <meta
       property="og:description"
-      content="Minggu, 15 Februari 2026 | 09.00 WIB" />
+      content="Minggu, 08 Februari 2026 | 09.00 WIB" />
     <meta
       property="og:url"
       content="https://wedding-heri-yolanda.mytiketin.com/" />
-
     <meta
       property="og:image"
-      content="https://wedding-heri-yolanda.mytiketin.com/assets/og.jpg" />
+      content="https://wedding-heri-yolanda.mytiketin.com/assets/background%20depan.JPEG" />
     <meta
       property="og:image:secure_url"
-      content="https://wedding-heri-yolanda.mytiketin.com/assets/og.jpg" />
+      content="https://wedding-heri-yolanda.mytiketin.com/assets/background%20depan.JPEG" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
+    <!-- WhatsApp / Telegram Friendly -->
+    <meta property="og:site_name" content="Heri & Yolanda Wedding" />
+
+    <!-- Fallback (Twitter / browser lain) -->
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="The Wedding of Heri & Yolanda" />
+    <meta
+      name="twitter:description"
+      content="Minggu, 08 Februari 2026 | 09.00 WIB" />
     <meta
       name="twitter:image"
-      content="https://wedding-heri-yolanda.mytiketin.com/assets/og.jpg" />
+      content="https://wedding-heri-yolanda.mytiketin.com/assets/background%20depan.JPEG" />
 
     <title>Undangan | Heri & Yola</title>
 
