--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
       content="Minggu, 15 Februari 2026 | 09.00 WIB" />
     <meta
       property="og:url"
-      content="https://wedding-heri-yolanda.mytiketin.com/" />
+      content="https://undangan-heri-yolanda.vercel.app/" />
 
     <meta
       property="og:image"
-      content="https://wedding-heri-yolanda.mytiketin.com/assets/og.jpg" />
+      content="https://undangan-heri-yolanda.vercel.app/assets/og.jpg" />
     <meta
       property="og:image:secure_url"
-      content="https://wedding-heri-yolanda.mytiketin.com/assets/og.jpg" />
+      content="https://undangan-heri-yolanda.vercel.app/assets/og.jpg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -26,7 +26,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:image"
-      content="https://wedding-heri-yolanda.mytiketin.com/assets/og.jpg" />
+      content="https://undangan-heri-yolanda.vercel.app/assets/og.jpg" />
 
     <title>Undangan | Heri & Yola</title>
 
