--- a/index.html
+++ b/index.html
@@ -489,9 +489,9 @@
             <button
               class="g2-item reveal"
               data-stagger="8"
-              data-full="assets/bg-acara.JPG"
+              data-full="assets/gallery8.jpeg"
               aria-label="Buka foto 6">
-              <img src="assets/bg-acara.JPG" alt="Gallery 6" loading="lazy" />
+              <img src="assets/gallery8.jpeg" alt="Gallery 6" loading="lazy" />
             </button>
           </div>
         </div>
